--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   },
   "license": "MIT",
   "scripts": {
-    "start": "node server",
-    "reload": "nodemon server"
+    "client-install": "npm install --prefix client",
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "dependencies": {
     "bcrypt": "^2.0.1",
@@ -15,6 +18,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "express-validator": "^5.2.0",
+    "concurrently": "^3.5.1",
     "nedb": "^1.8.0",
     "socket.io": "^2.1.1"
   },
