--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "concurrently": "^3.5.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "socket.io-client": "^2.1.1"
   },
@@ -14,6 +16,5 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "proxy": "http://localhost:4000"
+  }
 }
