--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "socket.io-client": "^2.1.1"
+    "socket.io-client": "^2.1.1",
+    "styled-components": "^3.3.2"
   },
   "scripts": {
     "start": "PORT=3007 react-scripts start",
